--- a/templates/GenespotRE/register_sa.html
+++ b/templates/GenespotRE/register_sa.html
@@ -47,7 +47,7 @@
 
                             <input id="user_sa" type="text" name="user_sa" placeholder="ex. 000000000000-alphanumericstringofcharacters@developer.gserviceaccount.com" class="form-control" required/>
                             <br>
-                            Are you going to use this service account to access controlled access?
+                            Are you going to use this service account to work with controlled-access dataset(s)?
                             <div class="radio">
                                 <label><input type="radio" name="select-datasets" value="no" checked> No</label>
                             </div>
