-> #1792 and #1732: various input lists should update correctly for set operations, deletion, and sharing -> The 'Delete' and 'Share' buttons will be disabled if any of your selected cohorts are not owned by you

--- a/templates/GenespotRE/landing.html
+++ b/templates/GenespotRE/landing.html
@@ -38,7 +38,7 @@
 
             <div class="row">
                 <div class="col-xs-8 col-xs-offset-2 lj-title-paragraph">
-                    <p class="lj-text-center" >The ISB Cancer Genomics Cloud (ISB-CGC) is democratizing access to NCI Cancer Data (<a href = "http://cancergenome.nih.gov/" target = "_blank"><strong>TCGA</strong></a>, <a href="https://ocg.cancer.gov/programs/target" target="_blank">TARGET</a>, <a href="https://portals.broadinstitute.org/ccle" target="_blank">CCLE</a>) and coupling it with unprecedented computational power to allow researchers to explore and analyze this vast data-space.</p>
+                    <p class="lj-text-center" >The ISB Cancer Genomics Cloud (ISB-CGC) is democratizing access to NCI Cancer Data (<a href = "http://cancergenome.nih.gov/" target = "_blank"><b>TCGA</b></a>, <a href="https://ocg.cancer.gov/programs/target" target="_blank"><b>TARGET</b></a>, <a href="https://portals.broadinstitute.org/ccle" target="_blank"><b>CCLE</b></a>) and coupling it with unprecedented computational power to allow researchers to explore and analyze this vast data-space.</p>
                 </div>
             </div>
 
