-> Fix for #2069 -> First pass at #2043

--- a/blink_sass/pages/_users.sass
+++ b/blink_sass/pages/_users.sass
@@ -109,8 +109,12 @@
     i.fa-check
         color: $isb-success
 
-#register-gcp, #user-register-sa
+#register-gcp, #user-register-sa, #user-adjust-sa
     margin-bottom: 30px
+    i.fa-check
+        color: $isb-success
+
+#register-gcp, #user-register-sa
     ul
         list-style: circle
         padding-left: 20px
@@ -122,8 +126,19 @@
             list-style: none
             padding: 0px
 
-    i.fa-check
-        color: $isb-success
+#user-adjust-sa
+    h4
+        margin-bottom: 25px
+    .radio, .checkbox
+        margin-left: 10px
+    ul
+        list-style: none
+        li.upper
+            margin-bottom: 20px
+
+
+
+
 
 #gcp-detail
     h1.page-header
