-> Initial work for #1652

--- a/blink_sass/pages/_cohorts.sass
+++ b/blink_sass/pages/_cohorts.sass
@@ -466,3 +466,22 @@
 .bq-label
     padding-left: 0px
     margin: 10px 0 0 0
+
+#file-upload-btn
+    padding-left: 0px
+
+#upload-file, #enter-barcodes
+    ul
+        margin-bottom: 15px
+        li
+            margin-left: 10px
+    textarea
+        width: 80%
+        max-width: 90%
+    button
+        display: inline-block
+        &.instructions
+            margin-bottom: 15px
+            margin-top: 20px
+            display: block
+            clear: both
