--- a/templates/GenespotRE/dashboard.html
+++ b/templates/GenespotRE/dashboard.html
@@ -136,7 +136,7 @@
                     {% else %}
                     <p>You don't have any saved Cohorts.</p>
                     {% endif %}
-                    <a href="{% url 'cohort' %}" class="btn btn-link">Create Cohort</a>
+                    Create a Cohort: <a href="{% url 'cohort' %}" class="btn btn-link">Filters</a> / <a href="{% url 'cohort_samples' %}" class="btn btn-link">Samples</a>
                 </div>
             </section>
         </div>
