-> Instructions display improvements

--- a/blink_sass/pages/_cohorts.sass
+++ b/blink_sass/pages/_cohorts.sass
@@ -485,3 +485,8 @@
             margin-top: 20px
             display: block
             clear: both
+    h5
+        margin-top: 25px
+span.code
+    font-family: monospace
+    font-weight: 600
