-> Further work on #1652

--- a/templates/cohorts/new_cohort_samples.html
+++ b/templates/cohorts/new_cohort_samples.html
@@ -83,7 +83,7 @@
                 <div class="col-md-12 data-tab-content-panel spinner-panel">
                     <div class="panel panel-default">
                         <div class="panel-heading">
-                            <h4>Upload a file of case and/or sample barcodes</h4>
+                            <h4>Upload a file of barcodes and programs</h4>
                         </div>
                         <div class="panel-body">
                             <div id="uploadField" class="center" style="display : inline-block;">
@@ -95,7 +95,7 @@
                                     <i class="fa fa-circle-o-notch fa-spin"></i>  <span id="selected-file-name"></span>
                                 </div>
                             </div>
-                            <button class="btn btn-primary instructions" title="Show/Hide the upload instructions">Instructions</button>
+                            <button class="btn btn-primary instructions" title="Show/Hide the instructions">Instructions</button>
                             <div class="instructions" style="display: none;">
                                 <p>All entries must contain a valid <span class="code">case barcode</span> and <span class="code">program short name</span>, and may optionally include a <span class="code">sample barcode</span>.
                                 <p>Valid program short names:</p>
@@ -105,10 +105,10 @@
                                     <li>TARGET</li>
                                 </ul>
                                 <p>When a sample barcode is omitted, all samples from the specified case will be included in the cohort. Make a separate entry per sample/case barcode pair if only specific samples from a case should be added to the cohort. </p>
-                                <p>Files must be in tab- or comma-delimited format (TSV or CSV), and should not include any headers. Values may be placed in single or double quotes. Format your entries as follows:</p>
+                                <p>Files must be in tab- or comma-delimited format (TSV or CSV) and have an extension of <span class="code">.txt</span>, <span class="code">.csv</span>, or <span class="code">.tsv</span>. Please do not include any column headers. Values may be placed in single or double quotes. Format your entries as follows:</p>
                                 <ul><pre>Case Barcode,Sample Barcode,Program Short Name</pre></ul>
                                 <p>When omitting sample barcodes, please be sure to still include the empty column's delimiter. (See examples below.) You may also include an empty quoted value ("" or ''), but this is optional.</p>
-                                <h5>Example Entries</h5>
+                                <h5>Example Barcode Set</h5>
                                 <ul>
                                     <pre>TCGA-N9-A4Q4,,TCGA
 TCGA-N7-A4Y8,TCGA-N7-A4Y8-01A,TCGA
@@ -117,7 +117,7 @@ TCGA-N7-A4Y8,TCGA-N7-A4Y8-01A,TCGA
 "TARGET-51-PAJLIV",, "TARGET"
 TARGET-51-PAJMFS,"", "TARGET"</pre>
                                 </ul>
-                                <p>After selecting the file and uploading it, the entries will be verified. Any entries which are found to be invalid will be listed, and you can choose to omit them or select a new file for verificaiton and upload.</p>
+                                <p>After selecting the file and uploading it, the entries will be validated. Any entries which are found to be invalid will be listed, and you can choose to omit them and continue with cohort creation, or select a new file for verificaiton and upload.</p>
                             </div>
                         </div>
                     </div>
@@ -127,7 +127,7 @@ TARGET-51-PAJMFS,"", "TARGET"</pre>
                 <div class="col-md-12 data-tab-content-panel spinner-panel">
                     <div class="panel panel-default">
                         <div class="panel-heading">
-                            <h4>Paste a set of case and/or sample barcodes</h4>
+                            <h4>Paste a set of barcodes and programs</h4>
                         </div>
                         <div class="panel-body">
                             <h5>Barcode Entries</h5>
@@ -136,7 +136,7 @@ TARGET-51-PAJMFS,"", "TARGET"</pre>
                                 <button class="btn btn-primary verify" title="Verify the barcode set">Verify</button>
                                 <button class="btn btn-primary save" title="Create the cohort" disabled>Save Cohort</button>
                             </p>
-                            <button class="btn btn-primary instructions" title="Show/Hide the upload instructions">Instructions</button>
+                            <button class="btn btn-primary instructions" title="Show/Hide the instructions">Instructions</button>
                             <div class="instructions" style="display: none;">
                                 <p>All entries must contain a valid <span class="code">case barcode</span> and <span class="code">program short name</span>, and may optionally include a <span class="code">sample barcode</span>.</p>
                                 <p>Valid program short names:</p>
@@ -149,7 +149,7 @@ TARGET-51-PAJMFS,"", "TARGET"</pre>
                                 <p>All entries must be in tab- or comma-separated format, and there should be no headers. Values may be placed in single or double quotes. Order your entries as follows:</p>
                                 <ul><pre>Case Barcode,Sample Barcode,Program Short Name</pre></ul>
                                 <p>When omitting sample barcodes, please be sure to still include the empty column's delimiter. (See examples below.) You may place an empty quoted value ("" or ''), but this is optional.</p>
-                                <h5>Example Entries</h5>
+                                <h5>Example Barcode Set</h5>
                                 <ul>
                                     <pre>TCGA-N9-A4Q4,,TCGA
 TCGA-N7-A4Y8,TCGA-N7-A4Y8-01A,TCGA
@@ -158,7 +158,7 @@ TCGA-N7-A4Y8,TCGA-N7-A4Y8-01A,TCGA
 "TARGET-51-PAJLIV",, "TARGET"
 TARGET-51-PAJMFS,"", "TARGET"</pre>
                                 </ul>
-                                <p>Click the 'Verify' button to check your entries. Any entries which are found to be invalid will be listed, and you can choose to omit them or re-enter the set.</p>
+                                <p>Click the 'Verify' button to validate your entries. Any entries which are found to be invalid will be listed. You can choose to omit them and continue with cohort creation, or re-enter the set.</p>
                             </div>
                         </div>
                     </div>
