--- a/blink_sass/pages/_cohorts.sass
+++ b/blink_sass/pages/_cohorts.sass
@@ -476,8 +476,9 @@
         li
             margin-left: 10px
     textarea
-        width: 80%
+        width: 90%
         max-width: 90%
+        height: 175px
     button
         display: inline-block
         &.instructions
@@ -487,6 +488,10 @@
             clear: both
     h5
         margin-top: 25px
+    table
+        width: 50%
+    hr
+        border-color: $isb-primary
 span.code
     font-family: monospace
     font-weight: 600
