--- a/templates/cohorts/cohort_list.html
+++ b/templates/cohorts/cohort_list.html
@@ -50,22 +50,22 @@
                     {% if not from_workbook %}
                         <div class="page-action-group">
                             <li role="menuitem">
-                                <button class="btn btn-primary createWorkbookWithCohort">New Workbook</button>
+                                <button class="btn btn-primary createWorkbookWithCohort" disabled title="Select one or more cohorts.">New Workbook</button>
                             </li>
                             <li class="separator"></li>
                             <li role="menuitem">
-                                <button id="delete-cohorts" type="button" class="btn btn-info owner-only" data-toggle="modal" data-target="#delete-cohorts-modal" aria-label="delete-cohorts" role="button" aria-expanded="true">
+                                <button id="delete-cohorts" type="button" class="btn btn-info owner-only" data-toggle="modal" data-target="#delete-cohorts-modal" aria-label="delete-cohorts" role="button" aria-expanded="true" disabled title="Select one or more cohorts.">
                                     <i class="fa fa-trash"></i>
                                     Delete
                                 </button>
                             </li>
                             <li role="menuitem">
-                                <button id="cohort-sets" type="button" class="btn btn-info" data-toggle="modal" data-target="#union-modal" aria-label="set-logic" role="button" aria-expanded="true">
+                                <button id="cohort-sets" type="button" class="btn btn-info set-ops" data-toggle="modal" data-target="#set-ops-modal" aria-label="set-logic" role="button" aria-expanded="true" disabled title="Select one or more cohorts.">
                                 Set Operations
                                 </button>
                             </li>
                             <li role="menuitem">
-                                <button class="btn btn-info owner-only" id="share-cohorts-btn" type="button" data-toggle="modal" data-target="#share-cohorts-modal" aria-label="share-cohorts" role="button" aria-expanded="true">
+                                <button class="btn btn-info owner-only" id="share-cohorts-btn" type="button" data-toggle="modal" data-target="#share-cohorts-modal" aria-label="share-cohorts" role="button" aria-expanded="true" disabled title="Select one or more cohorts.">
                                     <i class="fa fa-share-alt"></i>
                                     Share
                                 </button>
@@ -78,10 +78,10 @@
                             <th class="checkbox-col"><input type="checkbox" class="select-all" title="select-all"/></th>
                             <th class="name-col">Cohort Name</th>
                             <th class="sample-col"># Samples</th>
-                            <th># Cases</th>
+                            <th class="case-col"># Cases</th>
                             <th class="owner-col">Ownership</th>
-                            <th>Shared With</th>
-                            <th>Cohort ID</th>
+                            <th class="share-col">Shared With</th>
+                            <th class="id-col">Cohort ID</th>
                             <th class="date-col">Last Modified</th>
                         </tr></thead>
                         <tbody>
@@ -93,7 +93,7 @@
                                 </td>
                                 <td class="name-col"><a href="{% url 'cohort_details' cohort.id %}" title="{{ cohort.name|wrap_text }}">{{ cohort.name }}</a></td>
                                 <td class="sample-col"> {{ cohort.sample_size }} </td>
-                                <td>{{ cohort.case_size }}</td>
+                                <td class="case-col">{{ cohort.case_size }}</td>
                                 <td class="owner-col">
                                     {% if cohort.perm == 'Owner' %}
                                         You
@@ -108,7 +108,7 @@
                                         You
                                     {% endif %}
                                 </td>
-                                <td>
+                                <td class="id-col">
                                     {{ cohort.id }}
                                 </td>
                                 <td class="date-col">{{ cohort.last_date_saved|date:'M d, Y, g:i a' }}</td>
@@ -120,7 +120,7 @@
                 {% else %}
                     <div class="panel-body">
                         <br>
-                        <p class="center">You don't have any cohorts created yet. <br><a href="{% url 'cohort' %}" class="btn btn-link">Create Your First Cohort</a></p>
+                        <p class="center">You don't have any cohorts created yet. <br><a href="{% url 'cohort' %}" class="btn btn-primary">Create Your First Cohort</a></p>
                         <br>
                     </div>
                 {% endif %}
@@ -130,7 +130,7 @@
                 <div class="page-action-group">
                     <li role="menuitem"><button class="btn btn-primary createWorkbookWithCohort">New Workbook</button></li>
                     <li class="separator"></li>
-                    <li role="menuitem"><button class="btn btn-info" data-toggle="modal" data-target="#union-modal" aria-label="set-logic" role="button" aria-expanded="true">Set Operations</button></li>
+                    <li role="menuitem"><button class="btn btn-info set-ops" data-toggle="modal" data-target="#set-ops-modal" aria-label="set-logic" role="button" title="Select two or more cohorts." aria-expanded="true">Set Operations</button></li>
                 </div>
                 {% endif %}
                 {% if cohorts %}
@@ -166,7 +166,7 @@
 </div>
 
     <!-- Set Operation Modal -->
-    <div class="modal fade" id="union-modal" tabindex="-1" role="dialog" aria-labelledby="union-header" aria-hidden="true">
+    <div class="modal fade" id="set-ops-modal" tabindex="-1" role="dialog" aria-labelledby="union-header" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
@@ -195,10 +195,6 @@
                                 <div class="form-control-static" id="selected-ids">
 
                                 </div>
-                                <div class="cohort-search-div">
-                                    <a class="add-cohort btn btn-link"><i class="fa fa-plus"></i> Add A Cohort</a>
-                                    <input type="text" class="search-cohorts form-control" aria-label="Cohort Search Box"/>
-                                </div>
                             </div>
                         </div>
                         <div class="form-group complement-control">
@@ -206,7 +202,7 @@
                             <div>
                                 <p class="form-control-static" id="base-id"></p>
                                 <div class="cohort-search-div">
-                                    <a class="add-cohort btn btn-link"><i class="fa fa-plus"></i> Add A Cohort</a>
+                                    <a class="add-cohort btn btn-link"><i class="fa fa-plus"></i> Choose Cohort</a>
                                     <input type="text" class="search-cohorts form-control" aria-label="Cohort Search Box"/>
                                 </div>
                             </div>
@@ -216,7 +212,7 @@
                             <div>
                                 <p class="form-control-static" id="subtract-ids"></p>
                                 <div class="cohort-search-div">
-                                    <a class="add-cohort btn btn-link"><i class="fa fa-plus"></i> Add Cohort</a>
+                                    <a class="add-cohort btn btn-link"><i class="fa fa-plus"></i> Choose Cohort</a>
                                     <input type="text" class="search-cohorts form-control" aria-label="Cohort Search Box"/>
                                 </div>
                             </div>
@@ -226,7 +222,7 @@
                     <div class="modal-footer">
                         {% csrf_token %}
                         <button type="submit" class="btn btn-primary">Okay</button>
-                        <button type="button" class="btn btn-link" data-dismiss="modal">Cancel</button>
+                        <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
                     </div>
                 </form>
             </div>
@@ -249,7 +245,7 @@
                     <div class="modal-footer">
                         {% csrf_token %}
                         <input type="submit" value="Delete" class="btn btn-primary owner-only" />
-                        <button type="button" class="btn btn-link" data-dismiss="modal">Cancel</button>
+                        <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
                     </div>
                 </form>
             </div>
@@ -281,6 +277,7 @@
                             <div class="modal-footer">
                                 {% csrf_token %}
                                 <input type="submit" value="Share Cohort" class="btn btn-primary owner-only" />
+                                <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
                             </div>
                         </form>
                     </div>
